@@ -14,17 +14,19 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* New advanced dithering modes with many configuration options added to "Convert To Indexed" window
 	* Optional gamma correction for image scaling, rotation and Gaussian blur
 	* Smudge tool can be configured to ignore opacity mode - right click the tool icon
+	* Smudge tool respects tool opacity for RGB images
 	* Channel deletion made easier to use
 	* View window can now be placed under drawing window using the View menu or 'H' key
 	* "Blend A to B" with colour A identical to B now works like GIMP's Color To Alpha filter
 	* Arrows and Shift+Arrows now move cursor around on canvas
 	* Enter now simulates left mouse click, and Backspace, right click
 	* '[' ']' and '{' '}' keys now used to change colour A/B
+	* Ctrl+scroll wheel now scrolls canvas left-right (GTK+2 only)
 	* Selection marquee now persists through tool changes
 	* Lasso tool now works for rectangular selections too
 	* Indexed clipboard can now be pasted into RGB image
 	* Image save/load completely rewritten, now with better support for TIFF, BMP, XPM and XBM formats
-	* Channels and composite images can now be saved to any suitable supported file format
+	* Channels, composite images and undo images can now be saved to any suitable supported file format
 	* Image channel can now be saved and loaded just like other channels
 	* Paint tool in tint mode now respects both Tint +/- toggle and left/right mouse button
 	* "By image channel" flood fill option now works in non-fuzzy mode too
